force-app/main/default/objects/SAC_GenialSettingsCanal__c/SAC_GenialSettingsCanal__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Version de Genial Setting de tipo lista para que se pueda poner configuraciones especificas por canal de entrada de los casos</description>
    <label>Genial Settings Canal</label>
</CustomObject>