force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_Balanceador_Integracion__c.field-meta.xml
<CustomField>
    <fullName>SAC_Balanceador_Integracion__c</fullName>
    <description>Este campo se usa para poder balancear la asignación de casos a la IA a diferentes sistemas como Azure , Open Services, etc</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>El formato de este campo debe contener el nombre de la integración y el porcentaje de envio para cada sistema separados por &quot;;&quot;. Ej: Azure,50;OpenServices,50</inlineHelpText>
    <label>Balanceador Integraciones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>