force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_BotonReclamante__c.field-meta.xml
<CustomField>
    <fullName>SAC_BotonReclamante__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Configuración para la aparición que permite asignar los reclamantes sugeridos por la IA mediante un botón en la vista de Datos IA</description>
    <label>SAC_BotonReclamante</label>
    <type>Checkbox</type>
</CustomField>