force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_CantidadCasosActual__c.field-meta.xml
<CustomField>
    <fullName>SAC_CantidadCasosActual__c</fullName>
    <description>Cantidad de casos que se han recibido en el día actual.
Cuando se cambie de día su valor pasará a ser 0.</description>
    <label>Cantidad Casos Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>