force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_CantidadCasosMax__c.field-meta.xml
<CustomField>
    <fullName>SAC_CantidadCasosMax__c</fullName>
    <description>Cantidad máxima de casos que se podrán enviar a la IA en un día.
Si la cantidad actual de casos recibidos en un día supera este máximo ya no se enviará ningún caso más ese día.
Si la cantidad máxima esta vacía no se hará la comprobación por cantidad de casos.</description>
    <label>Cantidad Casos Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>