force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_DelayEnvio__c.field-meta.xml
<CustomField>
    <fullName>SAC_DelayEnvio__c</fullName>
    <description>Tiempo de espera para realizar el envío a la IA</description>
    <label>Delay Envío</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>