force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_FechaConteoCasos__c.field-meta.xml
<CustomField>
    <fullName>SAC_FechaConteoCasos__c</fullName>
    <description>Fecha en la que se ha modificado la Cantidad Casos Actual.
Si esta fecha es diferente al día actual, se actualiza con la nueva fecha y se pone la Cantidad Casos Actual. a 0.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Conteo Casos</label>
    <type>Date</type>
</CustomField>