force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_FechaFin__c.field-meta.xml
<CustomField>
    <fullName>SAC_FechaFin__c</fullName>
    <description>Fecha de fin a partir de la cual la IA ya no podrá recibir casos
Los casos que lleguen después de esta fecha no se enviarán a la IA, actuará como si estuviese siempre apagada.
Si está vacío no se aplica la restricción por fechas.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Fin</label>
    <type>Date</type>
</CustomField>