force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_FechaInicio__c.field-meta.xml
<CustomField>
    <fullName>SAC_FechaInicio__c</fullName>
    <description>Fecha de inicio a partir de la cual la IA podrá recibir casos
Los casos que lleguen antes de esta fecha no se enviarán a la IA, actuará como si estuviese siempre apagada.
Si está vacío no se aplica la restricción por fechas.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Inicio</label>
    <type>Date</type>
</CustomField>