force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_HoraFin__c.field-meta.xml
<CustomField>
    <fullName>SAC_HoraFin__c</fullName>
    <description>Hora de fin a partir de la cual ya no podrán entrar casos a la IA.
Los números enteros son la hora (Formato 24h) y los decimales son los minutos (de 0 a 59)
Si está vacío es que la restricción por rango de horas no se aplica.</description>
    <label>Hora Fin</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>