force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_Integracion_Adjuntos_Pesados__c.field-meta.xml
<CustomField>
    <fullName>SAC_Integracion_Adjuntos_Pesados__c</fullName>
    <description>EN este campo se define el sistema de integración al que deben de ir los casos que contentan documentos que superen el límite en el campo Tamaño Máximo Adjuntos</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Especifíca el Sistema (Azure, OpenServices, etc) por el que van a ir los casos con adjuntos que superen el límite introducido en el campo Tamaño Máximo Adjuntos.Por defecto irá por Azure si no está relleno y se supera el límite.</inlineHelpText>
    <label>Integración Adjuntos Pesados</label>
    <length>255</length>
    <type>Text</type>
</CustomField>