force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_MaxCasosAlcanzado__c.field-meta.xml
<CustomField>
    <fullName>SAC_MaxCasosAlcanzado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si está a true la cantidad de casos tratados por la IA ha llegado al límite definido en Cantidad Casos Max</description>
    <label>Max Casos Alcanzado</label>
    <type>Checkbox</type>
</CustomField>