force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_MondayON__c.field-meta.xml
<CustomField>
    <fullName>SAC_MondayON__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Si es un lunes, solo se podrán enviar casos a la IA si este check está a true.
Por defecto estará checked.</description>
    <label>Lunes Activado</label>
    <type>Checkbox</type>
</CustomField>