force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_Porcentaje__c.field-meta.xml
<CustomField>
    <fullName>SAC_Porcentaje__c</fullName>
    <description>porcentaje de casos que la aplicación puede coger para tratar por IA</description>
    <label>Porcentaje casos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>