force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_SaturdayON__c.field-meta.xml
<CustomField>
    <fullName>SAC_SaturdayON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si es un sabado, solo se podrán enviar casos a la IA si este check está a true.
Por defecto estará unchecked.</description>
    <label>Sabado Activado</label>
    <type>Checkbox</type>
</CustomField>