force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_SundayON__c.field-meta.xml
<CustomField>
    <fullName>SAC_SundayON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si es un domingo, solo se podrán enviar casos a la IA si este check está a true.
Por defecto estará unchecked.</description>
    <label>Domingo Activado</label>
    <type>Checkbox</type>
</CustomField>