force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_Tamano_Maximo_Attach__c.field-meta.xml
<CustomField>
    <fullName>SAC_Tamano_Maximo_Attach__c</fullName>
    <description>En este campo definiremos el tamaño máximo de adjuntos para la o las integraciones reflejada en Balanceo Integraciones</description>
    <inlineHelpText>En este campo definiremos el tamaño (MB) máximo de adjuntos para las integraciones reflejada en Balanceo Integraciones</inlineHelpText>
    <label>Tamaño Máximo Adjuntos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>