force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_ThursdayON__c.field-meta.xml
<CustomField>
    <fullName>SAC_ThursdayON__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Si es un jueves, solo se podrán enviar casos a la IA si este check está a true.
Por defecto estará checked.</description>
    <label>Jueves Activado</label>
    <type>Checkbox</type>
</CustomField>