force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_UmbralDetalle__c.field-meta.xml
<CustomField>
    <fullName>SAC_UmbralDetalle__c</fullName>
    <description>Campo donde se informa el umbral del detalle del mcc de las pretensiones</description>
    <label>Umbral Detalle</label>
    <precision>17</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>