force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_UmbralMotivo__c.field-meta.xml
<CustomField>
    <fullName>SAC_UmbralMotivo__c</fullName>
    <description>Campo donde se informa el umbral del motivo del mcc de las pretensiones</description>
    <label>Umbral Motivo</label>
    <precision>17</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>