force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_UmbralProductoServicio__c.field-meta.xml
<CustomField>
    <fullName>SAC_UmbralProductoServicio__c</fullName>
    <description>Campo donde se informa el umbral del producto/servicio del mcc de las pretensiones</description>
    <label>Umbral Producto/Servicio</label>
    <precision>17</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>