force-app/main/default/objects/SAC_GenialSettingsCanal__c/fields/SAC_UmbralTematica__c.field-meta.xml
<CustomField>
    <fullName>SAC_UmbralTematica__c</fullName>
    <description>Campo donde se informa el umbral de la temática del mcc de las pretensiones</description>
    <label>Umbral Temática</label>
    <precision>17</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>